# manila

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  .testr.conf  .travis.yml  .zuul.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  bindep.txt  concourse_unit_test_task  custom-requirements.txt  lower-constraints.txt  openstack-common.conf  pylintrc  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
api-ref/source/: availability-zones.inc  conf.py  consistency-group-snapshots.inc  consistency-groups.inc  experimental.inc  extensions.inc  index.rst  limits.inc  os-share-manage.inc  parameters.yaml  qos-types.inc  quota-classes.inc  quota-sets.inc  resource-locks.inc  scheduler-stats.inc  security-services.inc  services.inc  share-access-rule-metadata.inc  share-access-rules.inc  share-actions.inc  share-backups.inc  share-export-locations-metadata.inc  share-export-locations.inc  share-group-snapshots.inc  share-group-types.inc  share-groups.inc  share-instance-export-locations.inc  share-instances.inc  share-metadata.inc  share-migration.inc  share-network-subnets-metadata.inc  share-network-subnets.inc  share-networks.inc  share-replica-export-locations.inc  share-replica-metadata.inc  share-replicas.inc  share-server-migration.inc  share-servers.inc  share-transfers.inc  share-types.inc  (+7 more)
cinder/: exception.py  flags.py
cinder/api/: xmlutil.py
cinder/db/: api.py
cinder/scheduler/: chance.py  driver.py  filter_scheduler.py  host_manager.py  manager.py  rpcapi.py  simple.py
cinder/share/: __init__.py  api.py  configuration.py  driver.py  manager.py  rpcapi.py
cinder/tests/: test_share.py  test_share_api.py  test_share_driver.py  test_share_lvm.py  test_share_netapp.py  test_share_rpcapi.py
contrib/ci/: common.sh  post_test_hook.sh  pre_test_hook.sh  setup.sh
contrib/devstack/: README.rst
contrib/share_driver_hooks/: README.rst  zaqar_notification.py  zaqar_notification_example_consumer.py  zaqarclientwrapper.py
contrib/tempest/: README.rst
devstack/: README.rst  apache-manila.template  plugin.sh  settings
devstack/upgrade/: resources.sh  settings  shutdown.sh  upgrade.sh
doc/: Makefile  README.rst  find_autodoc_modules.sh  generate_autodoc_index.sh  requirements.txt
doc/ext/: cinder_autodoc.py  manila_autodoc.py  manila_todo.py
doc/source/: conf.py  glossary.rst  index.rst
etc/manila/: README.manila.conf  api-paste.ini  logging_sample.conf  manila-policy-generator.conf  manila.conf.sample  policy.json  rootwrap.conf
etc/oslo-config-generator/: manila.conf
httpd/: manila-uwsgi.ini  mod_wsgi-manila.conf  uwsgi-manila.conf
install-guide/source/: conf.py  get-started-with-shared-file-systems.rst  index.rst  install-controller-rdo.rst  install-share-debian.rst  install-share-node.rst  next-steps.rst  post-install.rst
manila/: __init__.py  context.py  coordination.py  exception.py  flags.py  i18n.py  manager.py  monkey_patch.py  opts.py  policy.py  quota.py  rpc.py  service.py  ssh_utils.py  test.py  utils.py  version.py  wsgi.py
manila.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
manila/api/: __init__.py  auth.py  common.py  extensions.py  sizelimit.py  urlmap.py  versions.py  xmlutil.py
manila/backup/: __init__.py  api.py  manager.py  rpcapi.py
manila/cmd/: __init__.py  all.py  api.py  data.py  manage.py  scheduler.py  share.py  status.py
manila/common/: client_auth.py  config.py  constants.py  sqlalchemyutils.py
manila/compute/: __init__.py  nova.py
manila/consistency_group/: api.py
manila/data/: backup_driver.py  helper.py  manager.py  rpcapi.py  utils.py
manila/db/: __init__.py  api.py  base.py  migration.py
manila/hacking/: checks.py
manila/image/: __init__.py  glance.py  image_utils.py
manila/keymgr/: __init__.py  barbican.py
manila/locale/: manila-log-error.pot  manila-log-info.pot  manila-log-warning.pot  manila.pot
manila/lock/: api.py
manila/message/: api.py  message_field.py  message_levels.py
manila/network/: __init__.py  nova_network_plugin.py  standalone_network_plugin.py
manila/policies/: __init__.py  availability_zone.py  base.py  message.py  qos_type.py  qos_type_specs.py  quota_class_set.py  quota_set.py  resource_lock.py  scheduler_stats.py  security_service.py  service.py  share_access.py  share_access_metadata.py  share_backup.py  share_export_location.py  share_group.py  share_group_snapshot.py  share_group_type.py  share_group_types_spec.py  share_instance.py  share_instance_export_location.py  share_network.py  share_network_subnet.py  share_replica.py  share_replica_export_location.py  share_server.py  share_snapshot.py  share_snapshot_export_location.py  share_snapshot_instance.py  share_snapshot_instance_export_location.py  share_transfer.py  share_type.py  share_types_extra_spec.py  shares.py
manila/privsep/: __init__.py  common.py  filesystem.py  lvm.py  os.py
manila/scheduler/: __init__.py  base_handler.py  chance.py  driver.py  filter_scheduler.py  host_manager.py  manager.py  rpcapi.py  scheduler_options.py  simple.py  utils.py
manila/services/: api.py
manila/share/: __init__.py  access.py  api.py  configuration.py  driver.py  drivers_private_data.py  hook.py  manager.py  migration.py  qos_types.py  rpcapi.py  share_types.py  snapshot_access.py  utils.py  volume_types.py
manila/share_group/: api.py  share_group_types.py
manila/testing/: README.rst
manila/tests/: __init__.py  db_utils.py  (+84 more)
manila_tempest_tests/: README.rst  clients.py  clients_share.py  config.py  plugin.py  share_exceptions.py  utils.py
manila_ui_extensions/: manila_ui_extensions.py
rally-jobs/: rally-manila-no-ss.yaml  rally-manila.yaml
releasenotes/: config.yaml
tools/: check_exec.py  check_logging.sh  coding-checks.sh  colorizer.py  cover.sh  enable-pre-commit-hook.sh  install_venv.py  install_venv_common.py  lintstack.py  patch_tox_venv.py  test-setup.sh  validate-json-files.py
zuul.d/: grenade-jobs.yaml  project.yaml  stable-victoria-tempest-jobs.yaml
(+2568 files in other folders)
