[metadata]
name = manila
summary = Shared Storage for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    manila
    manila_tempest_tests
[entry_points]
console_scripts =
    manila-all = manila.cmd.all:main
    manila-api = manila.cmd.api:main
    manila-manage = manila.cmd.manage:main
    manila-rootwrap = oslo_rootwrap.cmd:main
    manila-scheduler = manila.cmd.scheduler:main
    manila-share = manila.cmd.share:main
manila.scheduler.filters =
    AvailabilityZoneFilter = manila.scheduler.filters.availability_zone:AvailabilityZoneFilter
    CapabilitiesFilter = manila.scheduler.filters.capabilities:CapabilitiesFilter
    CapacityFilter = manila.scheduler.filters.capacity:CapacityFilter
    ConsistencyGroupFilter = manila.scheduler.filters.consistency_group:ConsistencyGroupFilter
    IgnoreAttemptedHostsFilter = manila.scheduler.filters.ignore_attempted_hosts:IgnoreAttemptedHostsFilter
    JsonFilter = manila.scheduler.filters.json:JsonFilter
    RetryFilter = manila.scheduler.filters.retry:RetryFilter
manila.scheduler.weighers =
    CapacityWeigher = manila.scheduler.weighers.capacity:CapacityWeigher
    PoolWeigher = manila.scheduler.weighers.pool:PoolWeigher
# These are for backwards compat with Havana notification_driver configuration values
oslo_messaging.notify.drivers =
    manila.openstack.common.notifier.log_notifier = oslo_messaging.notify._impl_log:LogDriver
    manila.openstack.common.notifier.no_op_notifier = oslo_messaging.notify._impl_noop:NoOpDriver
    manila.openstack.common.notifier.rpc_notifier2 = oslo_messaging.notify._impl_messaging:MessagingV2Driver
    manila.openstack.common.notifier.rpc_notifier = oslo_messaging.notify._impl_messaging:MessagingDriver
    manila.openstack.common.notifier.test_notifier = oslo_messaging.notify._impl_test:TestDriver
oslo.config.opts =
    manila = manila.opts:list_opts
manila.share.drivers.emc.plugins =
    vnx = manila.share.drivers.emc.plugins.vnx.connection:VNXStorageConnection
    isilon = manila.share.drivers.emc.plugins.isilon.isilon:IsilonStorageConnection
manila.tests.scheduler.fakes =
    FakeWeigher1 = manila.tests.scheduler.fakes:FakeWeigher1
    FakeWeigher2 = manila.tests.scheduler.fakes:FakeWeigher2
tempest.test_plugins =
    manila_tests = manila_tempest_tests.plugin:ManilaTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = manila/locale
domain = manila

[update_catalog]
domain = manila
output_dir = manila/locale
input_file = manila/locale/manila.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = manila/locale/manila.pot

[wheel]
universal = 1

[pbr]
warnerrors = true
