[metadata]
name = manila
summary = Shared Storage for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/manila/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    etc/manila =
        etc/manila/api-paste.ini
        etc/manila/policy.json
        etc/manila/rootwrap.conf
    etc/manila/rootwrap.d = etc/manila/rootwrap.d/*
packages =
    manila
    manila_tempest_tests

[entry_points]
console_scripts =
    manila-all = manila.cmd.all:main
    manila-api = manila.cmd.api:main
    manila-data = manila.cmd.data:main
    manila-manage = manila.cmd.manage:main
    manila-rootwrap = oslo_rootwrap.cmd:main
    manila-scheduler = manila.cmd.scheduler:main
    manila-share = manila.cmd.share:main
wsgi_scripts =
    manila-wsgi = manila.wsgi.wsgi:initialize_application
manila.scheduler.filters =
    AvailabilityZoneFilter = manila.scheduler.filters.availability_zone:AvailabilityZoneFilter
    CapabilitiesFilter = manila.scheduler.filters.capabilities:CapabilitiesFilter
    CapacityFilter = manila.scheduler.filters.capacity:CapacityFilter
    DriverFilter = manila.scheduler.filters.driver:DriverFilter
    IgnoreAttemptedHostsFilter = manila.scheduler.filters.ignore_attempted_hosts:IgnoreAttemptedHostsFilter
    JsonFilter = manila.scheduler.filters.json:JsonFilter
    RetryFilter = manila.scheduler.filters.retry:RetryFilter
    ShareReplicationFilter = manila.scheduler.filters.share_replication:ShareReplicationFilter
    # Share Group filters
    ConsistentSnapshotFilter = manila.scheduler.filters.share_group_filters.consistent_snapshot:ConsistentSnapshotFilter

manila.scheduler.weighers =
    CapacityWeigher = manila.scheduler.weighers.capacity:CapacityWeigher
    GoodnessWeigher = manila.scheduler.weighers.goodness:GoodnessWeigher
    PoolWeigher = manila.scheduler.weighers.pool:PoolWeigher

# These are for backwards compat with Havana notification_driver configuration values
oslo_messaging.notify.drivers =
    manila.openstack.common.notifier.log_notifier = oslo_messaging.notify._impl_log:LogDriver
    manila.openstack.common.notifier.no_op_notifier = oslo_messaging.notify._impl_noop:NoOpDriver
    manila.openstack.common.notifier.rpc_notifier2 = oslo_messaging.notify.messaging:MessagingV2Driver
    manila.openstack.common.notifier.rpc_notifier = oslo_messaging.notify.messaging:MessagingDriver
    manila.openstack.common.notifier.test_notifier = oslo_messaging.notify._impl_test:TestDriver
oslo.config.opts =
    manila = manila.opts:list_opts
oslo.config.opts.defaults =
    manila = manila.common.config:set_middleware_defaults
manila.share.drivers.dell_emc.plugins =
    vnx = manila.share.drivers.dell_emc.plugins.vnx.connection:VNXStorageConnection
    unity = manila.share.drivers.dell_emc.plugins.unity.connection:UnityStorageConnection
    isilon = manila.share.drivers.dell_emc.plugins.isilon.isilon:IsilonStorageConnection
    vmax = manila.share.drivers.dell_emc.plugins.vmax.connection:VMAXStorageConnection
manila.tests.scheduler.fakes =
    FakeWeigher1 = manila.tests.scheduler.fakes:FakeWeigher1
    FakeWeigher2 = manila.tests.scheduler.fakes:FakeWeigher2
tempest.test_plugins =
    manila_tests = manila_tempest_tests.plugin:ManilaTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html
warning-is-error = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = manila/locale
domain = manila

[update_catalog]
domain = manila
output_dir = manila/locale
input_file = manila/locale/manila.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = manila/locale/manila.pot

[wheel]
universal = 1
