[metadata]
name = manila
summary = Shared Storage for OpenStack
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/manila/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
data_files =
    etc/manila =
        etc/manila/api-paste.ini
        etc/manila/rootwrap.conf
    etc/manila/rootwrap.d = etc/manila/rootwrap.d/*
packages =
    manila

[entry_points]
console_scripts =
    manila-all = manila.cmd.all:main
    manila-api = manila.cmd.api:main
    manila-data = manila.cmd.data:main
    manila-manage = manila.cmd.manage:main
    manila-rootwrap = oslo_rootwrap.cmd:main
    manila-scheduler = manila.cmd.scheduler:main
    manila-share = manila.cmd.share:main
    manila-status = manila.cmd.status:main
wsgi_scripts =
    manila-wsgi = manila.wsgi.wsgi:initialize_application
manila.scheduler.filters =
    AffinityFilter = manila.scheduler.filters.affinity:AffinityFilter
    AntiAffinityFilter = manila.scheduler.filters.affinity:AntiAffinityFilter
    OnlyHostFilter = manila.scheduler.filters.host:OnlyHostFilter
    AvailabilityZoneFilter = manila.scheduler.filters.availability_zone:AvailabilityZoneFilter
    CapabilitiesFilter = manila.scheduler.filters.capabilities:CapabilitiesFilter
    CapacityFilter = manila.scheduler.filters.capacity:CapacityFilter
    DriverFilter = manila.scheduler.filters.driver:DriverFilter
    IgnoreAttemptedHostsFilter = manila.scheduler.filters.ignore_attempted_hosts:IgnoreAttemptedHostsFilter
    JsonFilter = manila.scheduler.filters.json:JsonFilter
    RetryFilter = manila.scheduler.filters.retry:RetryFilter
    ShareReplicationFilter = manila.scheduler.filters.share_replication:ShareReplicationFilter
    CreateFromSnapshotFilter = manila.scheduler.filters.create_from_snapshot:CreateFromSnapshotFilter
    # Share Group filters
    ConsistentSnapshotFilter = manila.scheduler.filters.share_group_filters.consistent_snapshot:ConsistentSnapshotFilter

manila.scheduler.weighers =
    CapacityWeigher = manila.scheduler.weighers.capacity:CapacityWeigher
    GoodnessWeigher = manila.scheduler.weighers.goodness:GoodnessWeigher
    PoolWeigher = manila.scheduler.weighers.pool:PoolWeigher
    HostAffinityWeigher = manila.scheduler.weighers.host_affinity:HostAffinityWeigher
    NetAppAIQWeigher = manila.scheduler.weighers.netapp_aiq:NetAppAIQWeigher

oslo.config.opts =
    manila = manila.opts:list_opts
oslo.config.opts.defaults =
    manila = manila.common.config:set_lib_defaults
oslo.policy.enforcer =
    manila = manila.policy:get_enforcer
oslo.policy.policies =
    # The sample policies will be ordered by entry point and then by list
    # returned from that entry point. If more control is desired split out each
    # list_rules method into a separate entry point rather than using the
    # aggregate method.
    manila = manila.policies:list_rules
manila.share.drivers.dell_emc.plugins =
    vnx = manila.share.drivers.dell_emc.plugins.vnx.connection:VNXStorageConnection
    unity = manila.share.drivers.dell_emc.plugins.unity.connection:UnityStorageConnection
    isilon = manila.share.drivers.dell_emc.plugins.isilon.isilon:IsilonStorageConnection
    powermax = manila.share.drivers.dell_emc.plugins.powermax.connection:PowerMaxStorageConnection
    powerstore = manila.share.drivers.dell_emc.plugins.powerstore.connection:PowerStoreStorageConnection
    powerflex = manila.share.drivers.dell_emc.plugins.powerflex.connection:PowerFlexStorageConnection
manila.tests.scheduler.fakes =
    FakeWeigher1 = manila.tests.scheduler.fakes:FakeWeigher1
    FakeWeigher2 = manila.tests.scheduler.fakes:FakeWeigher2
